refactor: fix SonarQube issues; optimize imports; cleanup code